# 0.00.19 (56286) Sep 7, 2011
Water tower: Changed to cursor hand with indicator arrows for hose nozzle rotation
# 0.00.18 (56265) Sep 7, 2011
Water tower: Added a static cursor for the hose nozzle rotation
# 0.00.17 (56189) Sep 5, 2011
Water tower: show arrow cursors for dragging the hose and rotating the nozzle, see #3061
# 0.00.16 (56082) Sep 2, 2011
Water tower: Added drag handles onto the hose and nozzle
Water tower: Made the hose draggable
Water tower: Added a nozzle graphic for the hose
Moved the water tower slightly to the left
Moved fluid density controls to the bottom right in all tabs
Moved reset all button directly under the control panel in all tabs
Pressure: Moved the control panel to the top right to match the other tabs
Fixed control panel insets in all tabs
Changed the control from flux to flow rate
Made flux readout dependent on flow rate, not the other way around
Renamed "Rate:" to "Flow Rate:"
Moved "metric" before "English" in units systems and made "metric" default on "flow" and "water tower" tabs
Pressure: Made sensors 20% larger
# 0.00.15 (56022) Sep 1, 2011
Improved insets and spacing for control panels
Moved up "ft^3/s" in rate readout in flux meter for english only since the units weren't centered
Fixed: Reset all broken for toolbox sensors
Fixed: Tools should snap back to the right location when dropped over the toolbox
Flow & Water tower: Added a toolbox for the tools
Fixed: Sensor positions shouldn't overlap the control panel for long translated versions
Pressure: Fixed initial location of pressure sensor
Fixed hot spot of pressure sensor to be in the center-left, not top-left
Constrained the pressure sensor node to remain in the visible region of the canvas, see #2826
Constrained the velocity sensor node to remain in the visible region of the canvas, see #2826
Fixed: Update the value in the velocity sensor on reset, without this call it would reset to "?" even if 0.00 was the original value